# concursus

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.venv-langgraph/: pyvenv.cfg
docs/: agentcore_placement.md
experiments/: README.md  opc_flywheel_eval.py  opc_flywheel_results.json
src/concursus/: __init__.py  assemble.py  build.py  cli.py  dag.py  deliberate.py  dks_engine.py  filevault.py  inner_graph.py  ledger.py  manifest.py  planner.py  precedent.py  provision.py  rundb.py  runindex.py  statestore.py  supervisor.py  trailstore.py  trust.py
src/concursus/assemble/: __init__.py  assemble.py  planner.py
src/concursus/core/: __init__.py  dag.py  manifest.py  resolve.py
src/concursus/execute/: __init__.py  supervisor.py
src/concursus/governor/: __init__.py  authoring.py  cockpit.py  ktlo.py  loop.py  registry.py  scheduler.py  scope.py  state.py
src/concursus/reasoning/: __init__.py  deliberate.py  dks_engine.py  inner_graph.py  trailstore.py
src/concursus/state/: __init__.py  capture.py  distill.py  filevault.py  precedent.py  rundb.py  rungraph.py  runindex.py  statestore.py
tests/: api_surface.snapshot.json  test_api_surface.py  test_assemble.py  test_authoring.py  test_build.py  test_capture.py  test_cockpit.py  test_contract_agentcore.py  test_contract_single_source.py  test_control_surface.py  test_coordination_notice.py  test_core.py  test_deliberate.py  test_distill.py  test_dks_engine.py  test_filevault.py  test_governor_e2e.py  test_governor_freeze_boundary.py  test_governor_ktlo.py  test_governor_ktlo_admission.py  test_governor_ktlo_culler.py  test_governor_loop.py  test_governor_registry.py  test_governor_resume.py  test_governor_schedule_core.py  test_governor_scheduler.py  test_governor_scope.py  test_governor_state.py  test_ingestion.py  test_inner_graph.py  test_ledger.py  test_payload_contract.py  test_planner.py  test_pluggable_dispatch.py  test_precedent.py  test_provision.py  test_resolve.py  test_run_event_contract.py  test_run_snapshot.py  test_rundb.py  (+7 more)
